Fix blocks to wrap with smaller window sizes

--- a/styles.css
+++ b/styles.css
@@ -91,13 +91,13 @@
     display: flex;
     flex: 1 1 100px;
     justify-content: space-around;
-    gap: 10px;
+    flex-wrap: wrap;
+    gap: 50px;
 }
 
 img {
     display: flex;
-    height: 50%;
-    width: auto;
+    width: 180px;
 }
 .block {
     text-align: center;
@@ -106,6 +106,7 @@ img {
     justify-content: center;
     align-items: center;
     gap: 3px;
+    width: 180px;
 
 }
 .quote-section {
